# mago

./: .gitattributes  .gitignore  .typos.toml  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE-MIT  README.md  SECURITY.md  SPONSORS.md  build.rs  composer.json  flake.nix  mago.toml  new.json  new.php  old.json
crates/algebra/: Cargo.toml
crates/algebra/src/: assertion_set.rs  clause.rs  lib.rs
crates/analyzer/: Cargo.toml
crates/analyzer/src/: analysis_result.rs  analyzable.rs  artifacts.rs  assertion.rs  code.rs  error.rs  formula.rs  issue.rs  lib.rs  settings.rs
crates/analyzer/src/common/: construct.rs  global.rs  synthetic.rs
crates/analyzer/src/context/: assertion.rs  block.rs  mod.rs  utils.rs
crates/analyzer/src/dataflow/: analyzer.rs  mod.rs  unused_variables.rs
crates/analyzer/src/expression/: argument_list.rs  array.rs  array_access.rs  arrow_function.rs  binary.rs  clone.rs  closure.rs  composite_string.rs  conditional.rs  constant_access.rs  construct.rs  instantiation.rs  literal.rs  magic_constant.rs  match.rs  mod.rs  throw.rs  unary.rs  variable.rs  yield.rs
crates/analyzer/src/heuristic/: avoid_catching_error.rs  mod.rs  override_attribute.rs  unused_parameter.rs
crates/analyzer/src/invocation/: analyzer.rs  arguments.rs  mod.rs  post_process.rs  resolver.rs  return_type_fetcher.rs  template_inference.rs  template_result.rs
crates/analyzer/src/reconciler/: assertion_reconciler.rs  macros.rs  mod.rs  negated_assertion_reconciler.rs  simple_assertion_reconciler.rs  simple_negated_assertion_reconciler.rs
crates/analyzer/src/resolver/: class_constant.rs  class_name.rs  class_template_type_collector.rs  method.rs  mod.rs  property.rs  selector.rs  static_method.rs  static_property.rs
crates/analyzer/src/statement/: constant.rs  echo.rs  global.rs  if.rs  mod.rs  return.rs  static.rs  switch.rs  try.rs  unset.rs
crates/analyzer/src/utils/: conditional.rs  docblock.rs  misc.rs  mod.rs  template.rs
crates/analyzer/src/visibility/: mod.rs
crates/analyzer/tests/: framework.rs  mod.rs
crates/analyzer/tests/cases/: array_key_exists.php  array_list_reconciliation.php  array_shape_access.php  assert_generic_array_key_is_array_key.php  closure_wrap.php  collection_types.php  conditional_return_resolved_to_left.php  conditional_return_resolved_to_right.php  conditional_return_with_assignment_in_condition.php  conditional_type_narrowing.php  count.php  default_parameter_inference.php  docblock_type_narrowing.php  extends_inheritance_error_path.php  generic_shape_coercion.php  infer_class_string_on_generic_object.php  issue_359.php  issue_391.php  iterable_count.php  iterable_reconciliation.php  iterator_to_array.php  magic_methods.php  magic_methods_args.php  magic_properties.php  match_expression.php  match_not_exhaustive.php  method_docblock.php  narrow_class_string_match.php  numeric_reconciliation.php  overload_resolution_for_callable.php  priority_queue_implementation.php  private_static_method.php  property_docblock.php  reconcile_array_index_type.php  reconcile_empty_string.php  reconciling_generic_parameter.php  recursive_templates.php  ref_constraint_conflict.php  resource_reconciliation.php  scalar_types_reconciliation.php  (+19 more)
crates/ast/: Cargo.toml
crates/ast-utils/: Cargo.toml
crates/ast-utils/src/: assignment.rs  condition.rs  control_flow.rs  definition.rs  lib.rs  reference.rs
crates/ast/src/: lib.rs  node.rs  sequence.rs  trivia.rs
crates/ast/src/ast/: access.rs  argument.rs  array.rs  assignment.rs  attribute.rs  binary.rs  block.rs  call.rs  clone.rs  closure_creation.rs  conditional.rs  constant.rs  (+30 more)
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: lib.rs
crates/codex/: Cargo.toml
crates/codex/src/: assertion.rs  diff.rs  issue.rs  lib.rs  misc.rs  populator.rs  reference.rs  symbol.rs  visibility.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  linter.rs  source.rs
crates/docblock/: Cargo.toml  README.md
crates/docblock/src/: document.rs  error.rs  lib.rs  tag.rs
crates/feedback/: Cargo.toml
crates/feedback/src/: lib.rs  logger.rs  progress.rs
crates/fixer/: Cargo.toml
crates/fixer/src/: lib.rs
crates/formatter/: Cargo.toml
crates/formatter/docs/: settings.md
crates/formatter/src/: binaryish.rs  lib.rs  macros.rs  parens.rs  settings.rs  utils.rs
crates/formatter/tests/: mod.rs  precedence.rs
crates/inference/: Cargo.toml
crates/inference/src/: lib.rs
crates/interner/: Cargo.toml
crates/interner/benches/: general.rs
crates/interner/src/: lib.rs
crates/interner/tests/: mod.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: error.rs  input.rs  lib.rs
crates/lexer/tests/: tokenizer.rs
crates/linter/: Cargo.toml
crates/linter/src/: ast.rs  category.rs  consts.rs  context.rs  definition.rs  directive.rs  ignore.rs  integration.rs  lib.rs  pragma.rs  registry.rs  rule.rs  rule_meta.rs  runner.rs  scope.rs  settings.rs  utils.rs
crates/linter/tests/: examples.rs
crates/names/: Cargo.toml
crates/names/src/: kind.rs  lib.rs  resolver.rs  scope.rs
crates/parser/: Cargo.toml
crates/parser/src/: error.rs  lib.rs
crates/project/: Cargo.toml
crates/project/src/: lib.rs  module.rs
crates/reference/: Cargo.toml
crates/reference/src/: lib.rs  query.rs
crates/reflection/: Cargo.toml
crates/reflection/src/: attribute.rs  constant.rs  identifier.rs  lib.rs
crates/reflector/: Cargo.toml
crates/reflector/src/: lib.rs  populator.rs
crates/reporting/: Cargo.toml
crates/reporting/src/: error.rs  lib.rs  reporter.rs
crates/semantics/: Cargo.toml
crates/semantics/src/: consts.rs  context.rs  lib.rs  walker.rs
crates/service/: Cargo.toml
crates/service/src/: lib.rs
crates/source/: Cargo.toml
crates/source/src/: error.rs  internal.rs  lib.rs
crates/span/: Cargo.toml
crates/span/src/: lib.rs
crates/symbol-table/: Cargo.toml
crates/symbol-table/src/: context.rs  lib.rs  symbol.rs  table.rs  walker.rs
crates/token/: Cargo.toml
crates/token/src/: lib.rs
crates/traverser/: Cargo.toml
crates/traverser/src/: lib.rs
(+1379 files in other folders)
