[package]
name = "mago"
version = "0.0.2"
edition = "2021"
authors = ["Saif Eddin Gmati <azjezz@protonmail.com>"]
license = "MIT OR Apache-2.0"
description = "A comprehensive suite of PHP tooling inspired by Rust’s approach, providing parsing, linting, formatting, and more through a unified CLI and library interface."
homepage = "https://github.com/carthage-software/mago"
repository = "https://github.com/carthage-software/mago"
rust-version = "1.82.0"

[workspace]
package.edition = "2021"
package.authors = ["Saif Eddin Gmati <azjezz@protonmail.com>"]
package.license = "MIT OR Apache-2.0"
package.version = "0.0.2"
package.homepage = "https://github.com/carthage-software/mago"
package.repository = "https://github.com/carthage-software/mago"
package.rust-version = "1.82.0"
members = ["crates/*"]

[workspace.lints.clippy]
borrow_interior_mutable_const = { level = "allow" }
declare_interior_mutable_const = { level = "allow" }
# ast nodes are large enums, we want to keep them as is ( for now )
large_enum_variant = { level = "allow" }

[workspace.dependencies]
mago-ast = { path = "crates/ast", version = "0.0.2" }
mago-ast-utils = { path = "crates/ast-utils", version = "0.0.2" }
mago-casing = { path = "crates/casing", version = "0.0.2" }
mago-cli = { path = "crates/cli", version = "0.0.2" }
mago-composer = { path = "crates/composer", version = "0.0.2" }
mago-docblock = { path = "crates/docblock", version = "0.0.2" }
mago-feedback = { path = "crates/feedback", version = "0.0.2" }
mago-fixer = { path = "crates/fixer", version = "0.0.2" }
mago-formatter = { path = "crates/formatter", version = "0.0.2" }
mago-interner = { path = "crates/interner", version = "0.0.2" }
mago-lexer = { path = "crates/lexer", version = "0.0.2" }
mago-linter = { path = "crates/linter", version = "0.0.2" }
mago-names = { path = "crates/names", version = "0.0.2" }
mago-parser = { path = "crates/parser", version = "0.0.2" }
mago-reflection = { path = "crates/reflection", version = "0.0.2" }
mago-reflector = { path = "crates/reflector", version = "0.0.2" }
mago-reporting = { path = "crates/reporting", version = "0.0.2" }
mago-semantics = { path = "crates/semantics", version = "0.0.2" }
mago-service = { path = "crates/service", version = "0.0.2" }
mago-source = { path = "crates/source", version = "0.0.2" }
mago-span = { path = "crates/span", version = "0.0.2" }
mago-symbol-table = { path = "crates/symbol-table", version = "0.0.2" }
mago-token = { path = "crates/token", version = "0.0.2" }
mago-traverser = { path = "crates/traverser", version = "0.0.2" }
mago-trinary = { path = "crates/trinary", version = "0.0.2" }
mago-typing = { path = "crates/typing", version = "0.0.2" }
mago-walker = { path = "crates/walker", version = "0.0.2" }
mago-wasm = { path = "crates/wasm", version = "0.0.2" }
dashmap = { version = "6.1.0" }
tracing = { version = "0.1.40" }
ahash = { version = "0.8.11" }
getrandom = { version = "0.2", features = ["js"] }
serde_json = { version = "1.0.128" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.39.3", features = ["rt", "time"] }
strum = { version = "0.26", features = ["derive"] }
ordered-float = { version = "4.0", default-features = false, features = ["serde"] }
pretty_assertions = { version = "1.4.1" }
either = { version = "1.13.0" }
codespan-reporting = { version = "0.11.1", features = ["serde", "serialization"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
config = { version = "0.14.0", features = ["toml"] }
toml = { version = "0.8.19" }
num_cpus = "1.16.0"
regex = "1.11.0"
cruet = "0.14.0"
indicatif = { version = "0.17.8", features = ["tokio"] }
glob-match = "0.2.1"
paste = "1.0.15"
criterion = "0.5.1"
lasso = { version = "0.7.3", features = [
    "multi-threaded",
    "ahasher",
    "inline-more",
]}
clap = { version = "4.5.20", features = ["cargo", "derive", "unicode", "wrap_help"] }
futures = "0.3.31"
async-walkdir = "2.0.0"
termtree = "0.5.1"
bitflags = "2.6.0"
wasm-bindgen = "0.2.97"
serde-wasm-bindgen = "0.4"

[dependencies]
mago-cli = { workspace = true }

[profile.release]
opt-level = 3
debug = false
strip = 'symbols'
debug-assertions = false
overflow-checks = false
lto = 'fat'
panic = 'abort'
incremental = true
codegen-units = 1
rpath = true
