[package]
name = "mago-ast-utils"
description = "Helper functions and utilities for working with PHP AST nodes."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
mago-ast = { workspace = true }
mago-span = { workspace = true }
