[package]
name = "mago-ast"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
mago-source = { path = "../source" }
mago-span = { path = "../span" }
mago-token = { path = "../token" }
mago-interner = { path = "../interner" }
serde = { workspace = true }
strum = { workspace = true }
ordered-float = { workspace = true, features = ["serde", "rand"] }
