[package]
name = "mago-ast"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
mago-source = { workspace = true }
mago-span = { workspace = true }
mago-token = { workspace = true }
mago-interner = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
ordered-float = { workspace = true, features = ["serde", "rand"] }
