[package]
name = "mago-ast"
description = "Supplies the data structures and types for representing PHP code as an Abstract Syntax Tree (AST)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
mago-source = { workspace = true }
mago-span = { workspace = true }
mago-token = { workspace = true }
mago-interner = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
ordered-float = { workspace = true, features = ["serde", "rand"] }
