[package]
name = "mago-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
mago-ast = { path = "../ast" }
mago-reporting = { path = "../reporting" }
mago-interner = { path = "../interner" }
mago-source = { path = "../source" }
mago-fixer = { path = "../fixer" }
mago-service = { path = "../service" }
mago-feedback = { path = "../feedback" }
serde = { workspace = true }
tokio = { workspace = true , features = ["rt", "rt-multi-thread", "time"] }
clap = { workspace = true }
ahash = { workspace = true }
termtree = { workspace = true }
serde_json = { workspace = true }
