[package]
name = "mago-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
mago-ast = { workspace = true }
mago-reporting = { workspace = true }
mago-interner = { workspace = true }
mago-source = { workspace = true }
mago-fixer = { workspace = true }
mago-service = { workspace = true }
mago-feedback = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true , features = ["rt", "rt-multi-thread", "time"] }
clap = { workspace = true }
ahash = { workspace = true }
termtree = { workspace = true }
serde_json = { workspace = true }
