[package]
name = "fennec-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
tracing = { workspace = true }
serde = { workspace = true }
config = { workspace = true }
toml = { workspace = true }
num_cpus = { workspace = true }
ahash = { workspace = true }
