[package]
name = "mago-docblock"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
mago-ast = { path = "../ast" }
mago-span = { path = "../span" }
mago-interner = { path = "../interner" }
tracing = { workspace = true }
serde = { workspace = true }
