[package]
name = "mago-docblock"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
mago-ast = { workspace = true }
mago-span = { workspace = true }
mago-interner = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
