[package]
name = "mago-feedback"
description = "Logging, progress bars, and other feedback utilities."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
indicatif = { workspace = true }
