[package]
name = "mago-formatter"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
mago-ast = { workspace = true }
mago-source = { workspace = true }
mago-span = { workspace = true }
mago-token = { workspace = true }
mago-interner = { workspace = true }
ahash = { workspace = true }
strum = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
bitflags = { workspace = true }
