[package]
name = "mago-formatter"
description = "Reformats PHP source code according to configurable style rules, ensuring consistent code style across a project or organization."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
mago-ast = { workspace = true }
mago-source = { workspace = true }
mago-span = { workspace = true }
mago-token = { workspace = true }
mago-interner = { workspace = true }
ahash = { workspace = true }
strum = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
bitflags = { workspace = true }
