[package]
name = "mago-interner"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
lasso = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "general"
harness = false
