[package]
name = "mago-interner"
description = "A string interning library that stores and reuses identical strings efficiently, improving memory use in large codebases or tools."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
lasso = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "general"
harness = false
