[package]
name = "fennec-lexer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
fennec-source = { path = "../source" }
fennec-span = { path = "../span" }
fennec-token = { path = "../token" }
fennec-reporting = { path = "../reporting" }
fennec-interner = { path = "../interner" }
serde = { workspace = true }
strum = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
