[package]
name = "mago-lexer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
mago-source = { path = "../source" }
mago-span = { path = "../span" }
mago-token = { path = "../token" }
mago-reporting = { path = "../reporting" }
mago-interner = { path = "../interner" }
serde = { workspace = true }
strum = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
