[package]
name = "mago-lexer"
description = "A fast and efficient lexer for PHP code."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
mago-source = { workspace = true }
mago-span = { workspace = true }
mago-token = { workspace = true }
mago-reporting = { workspace = true }
mago-interner = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
