[package]
name = "mago-linter"
description = "A PHP linter that identifies common coding errors, style issues, and potential bugs, helping maintain high code quality."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
mago-fixer = { workspace = true }
mago-semantics = { workspace = true }
mago-reporting = { workspace = true }
mago-docblock = { workspace = true }
mago-interner = { workspace = true }
mago-span = { workspace = true }
mago-ast = { workspace = true }
mago-ast-utils = { workspace = true }
mago-names = { workspace = true }
mago-source = { workspace = true }
mago-symbol-table = { workspace = true }
mago-reflection = { workspace = true }
mago-walker = { workspace = true }
mago-casing = { workspace = true }
ahash = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
toml = { workspace = true }
