[package]
name = "mago-names"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
mago-interner = { path = "../interner" }
mago-walker = { path = "../walker" }
mago-span = { path = "../span" }
mago-ast = { path = "../ast" }
serde = { workspace = true }
strum = { workspace = true }
ahash = { workspace = true }
