[package]
name = "mago-names"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
mago-interner = { workspace = true }
mago-walker = { workspace = true }
mago-span = { workspace = true }
mago-ast = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
ahash = { workspace = true }
