[package]
name = "fennec-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
fennec-source = { path = "../source" }
fennec-span = { path = "../span" }
fennec-reporting = { path = "../reporting" }
fennec-ast = { path = "../ast" }
fennec-token = { path = "../token" }
fennec-interner = { path = "../interner" }
fennec-lexer = { path = "../lexer" }
ordered-float = { workspace = true, features = ["serde", "rand"] }
either = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = [
    "rt",
    "rt-multi-thread",
    "test-util",
    "macros",
] }
