[package]
name = "mago-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
mago-source = { path = "../source" }
mago-span = { path = "../span" }
mago-feedback = { path = "../feedback" }
mago-reporting = { path = "../reporting" }
mago-ast = { path = "../ast" }
mago-token = { path = "../token" }
mago-interner = { path = "../interner" }
mago-lexer = { path = "../lexer" }
ordered-float = { workspace = true, features = ["serde", "rand"] }
either = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = [
    "rt",
    "rt-multi-thread",
    "test-util",
    "macros",
] }
