[package]
name = "mago-parser"
description = "A fast, recursive descent parser for PHP."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
mago-source = { workspace = true }
mago-span = { workspace = true }
mago-reporting = { workspace = true }
mago-ast = { workspace = true }
mago-token = { workspace = true }
mago-interner = { workspace = true }
mago-lexer = { workspace = true }
ordered-float = { workspace = true, features = ["serde", "rand"] }
either = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = [
    "rt",
    "rt-multi-thread",
    "test-util",
    "macros",
] }
