[package]
name = "mago-project"
description = "A crate for representing and analyzing PHP projects. It parses PHP source files into ASTs, resolves names, collects semantic issues, and merges module reflections into a unified project reflection, serving as a core component of the Mago toolchain."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
mago-reporting = { workspace = true }
mago-interner = { workspace = true }
mago-syntax = { workspace = true }
mago-php-version = { workspace = true }
mago-span = { workspace = true }
mago-names = { workspace = true }
mago-reflection = { workspace = true }
mago-typing = { workspace = true }
mago-source = { workspace = true }
serde = { workspace = true }
ahash = { workspace = true }
