[package]
name = "mago-reference"
description = "Mago Reference is a library for analyzing PHP codebases by providing advanced symbol search capabilities."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
mago-interner = { workspace = true }
mago-span = { workspace = true }
mago-syntax = { workspace = true }
mago-names = { workspace = true }
serde = { workspace = true }
