[package]
name = "mago-reflection"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
mago-interner = { path = "../interner" }
mago-span = { path = "../span" }
mago-source = { path = "../source" }
mago-trinary = { path = "../trinary" }
ahash = { workspace = true }
serde = { workspace = true }
ordered-float = { workspace = true }
