[package]
name = "mago-reflection"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
mago-interner = { workspace = true }
mago-span = { workspace = true }
mago-source = { workspace = true }
mago-trinary = { workspace = true }
ahash = { workspace = true }
serde = { workspace = true }
ordered-float = { workspace = true }
