[package]
name = "mago-reflection"
description = "Offers data structures and APIs to represent and inspect PHP code elements—like classes, functions, and interfaces—enabling introspection and analysis."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
mago-interner = { workspace = true }
mago-span = { workspace = true }
mago-source = { workspace = true }
mago-trinary = { workspace = true }
ahash = { workspace = true }
serde = { workspace = true }
ordered-float = { workspace = true }
