[package]
name = "mago-reflector"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
mago-interner = { path = "../interner" }
mago-span = { path = "../span" }
mago-ast = { path = "../ast" }
mago-ast-utils = { path = "../ast-utils" }
mago-walker = { path = "../walker" }
mago-source = { path = "../source" }
mago-semantics = { path = "../semantics" }
mago-typing = { path = "../typing" }
mago-reflection = { path = "../reflection" }
ahash = { workspace = true }
